--- a/views/list.ejs
+++ b/views/list.ejs
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="box" id="heading">
-            <h1><%= day%></h1>
+            <h1><%= listTitle%></h1>
         </div>
         <div class="box">
 
@@ -21,7 +21,7 @@
 
             <form class="item" action="/" method="POST">
                 <input type="text" name="newItem" placeholder="New task" autocomplete="off">
-                <button type="submit" name="submit">+</button>
+                <button type="submit" name="list" value=<%= listTitle%>>+</button>
             </form>
 
         </div>
