--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,6 @@
     </body>
 
     <footer>
-        <p>&copy Felipe Castro Richter 2018</p>
+        &copy Felipe Castro Richter 2018
     </footer>
 </html>
