--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,6 @@
     </body>
 
     <footer>
-        &copy Felipe Castro Richter 2018
+        &copy 2019 Felipe Castro Richter 
     </footer>
 </html>
